# animeloader

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  build.py  client_config.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  server_config.yaml
.github/workflows/: run-tests.yml
client/: main.py
client/api/: __init__.py  client.py
client/commands/: __init__.py  anime_commands.py  download_commands.py  downloader_commands.py  link_commands.py  rss_commands.py  status_commands.py
client/tests/: __init__.py  test_auth.py  test_smart_add.py
client/utils/: config.py
data/: animeloader.db
docs/: API_AUTH_PATTERNS.md  DESIGN.md  TESTS.md
server/: config.yaml  main.py
server/api/: __init__.py  auth.py  routes.py  schemas.py
server/database/: __init__.py  session.py
server/downloaders/: __init__.py  base_downloader.py
server/link_parsers/: __init__.py  base_parser.py  ed2k_parser.py  magnet_parser.py
server/models/: __init__.py  anime.py  api_key.py  download.py  downloader.py  link.py  rss_source.py
server/parsers/: __init__.py  ed2k_parser.py  magnet_parser.py
server/services/: __init__.py  anime_service.py  api_key_service.py  download_service.py  downloader_service.py  link_service.py  rss_service.py  scheduler_service.py  smart_parser_service.py
server/site_parsers/: __init__.py  base_rss_parser.py  base_site_parser.py  example_rss_parser.py  mikan_parser.py  mikan_rss_parser.py
tests/: test_api.py  test_api_duplicate.py  test_auth.py  test_base.py  test_commands_import.py  test_download_commands.py  test_download_commands_simple.py  test_download_service.py  test_downloader_commands.py  test_downloader_commands_simple.py  test_downloader_service.py  test_duplicate_prevention.py  test_integration.py  test_link_commands.py  test_link_commands_simple.py  test_link_service.py  test_rss_commands.py  test_rss_commands_simple.py  test_rss_parser.py  test_scheduler_service.py  test_smart_add.py  test_smart_parser.py  test_status_commands.py  test_status_commands_simple.py  test_utils.py
(+35 files in other folders)
